# access-control-system

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  vite.config.ts
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  setup-models.sh
cmd/: build-iso.sh
cmd/package/: setup-kiosk.sh
docs/: README.md
docs/api/: external-api.md  http-routing.md
docs/camera/: camera-capture.md
docs/face-auth/: face-recognition.md  face-registration.md
docs/gesture/: gesture-control.md
docs/overview/: architecture.md
docs/settings/: settings.md
docs/system/: build-and-deploy.md  kiosk-operations.md
docs/ui/: design-customization.md  screens.md
install/: setup.sh
scripts/: dev.sh  dev.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  camera_capture.rs  lib.rs  main.rs  settings.rs
src-tauri/src/vision/: face.rs  geometry.rs  gesture.rs  mod.rs  overlay.rs  paths.rs  runtime.rs
src/api/: attendance.ts  faceRegistration.ts  members.ts
src/app/: App.css  App.tsx
src/app/providers/: AppProviders.tsx
src/components/: AttendanceActionSheet.tsx  CameraView.tsx  FaceDetectorTest.tsx  FaceRecognitionTest.tsx  LeftSideContent.tsx  RegisterFaceView.tsx  RightSideContent.tsx  icons.tsx
src/entities/member/: MemberContext.tsx  api.ts  attendanceApi.ts  model.ts  statusStyle.ts  useMembers.ts
src/features/attendance-action/: AttendanceActionSheet.tsx  api.ts
src/features/face-auth/: FaceAuthContext.tsx  FaceAuthPanel.tsx  FaceDetectionOverlay.tsx  FaceMatchConfirmCard.tsx  FaceRegistrationForm.tsx  FaceRegistrationOverlay.tsx  model.ts  useEnrolledFaces.ts  useFaceRecognitionLoop.ts
src/features/gesture/: GestureCountdown.tsx  GestureGuide.tsx  useGestureStatusLoop.ts
src/features/kiosk-socket/: useKioskSocket.ts
src/features/member-directory/: MemberCard.tsx  MemberListPanel.tsx
src/features/screen-dimmer/: PresenceDimmer.tsx  ScreenDimmer.tsx
src/features/system-check/: BootCheckScreen.tsx  checks.ts  useBootChecks.ts
src/features/system-control/: SystemControlPanel.tsx
src/hooks/: useCamera.ts  useEnrolledStudents.ts  useFaceApi.ts  useFaceDetector.ts  useMembers.ts  useOpenCV.ts
src/shared/hooks/: useAppVersion.ts  useCamera.ts  useDialogAccessibility.ts  useEventLog.ts  useFaceApiModels.ts  useNativeCameraFeed.ts  useSettings.ts  useTheme.ts  useUiSoundEffects.ts
src/shared/lib/: apiBodyTemplate.ts  eventLog.ts  hardwareVolume.ts  httpClient.ts  systemCommands.ts  uiSound.ts  visionApi.ts  withTimeout.ts
src/shared/theme/: ThemeContext.tsx
src/shared/ui/: CameraFeed.tsx  ConfirmDialog.tsx  IconButton.tsx  ThemeToggleButton.tsx  icons.tsx
src/widgets/attendance-action-sheet/: AttendanceActionSheet.tsx  api.ts
src/widgets/boot-check-screen/: BootCheckScreen.tsx  checks.ts  hardwareChecks.ts  useBootChecks.ts
src/widgets/external-site-page/: ExternalSitePage.tsx  externalSiteHtml.ts
src/widgets/face-auth-panel/: FaceAuthPanel.tsx
src/widgets/member-list-panel/: MemberCard.tsx  MemberListPanel.tsx
src/widgets/settings-page/: SettingsPage.tsx  fields.tsx  restartPolicy.ts
src/widgets/settings-page/sections/: ApiBodySection.tsx  AppearanceSection.tsx  ConnectionSection.tsx  ExternalSitesField.tsx  GeneralSection.tsx  GestureSection.tsx  LogsSection.tsx  PerformanceSection.tsx  SystemSection.tsx
src/widgets/settings-panel/: ApiBodyPanel.tsx  LogPanel.tsx  SettingsPanel.tsx
src/widgets/status-footer/: StatusFooter.tsx
src/widgets/system-control-panel/: SystemControlPanel.tsx  api.ts
tests/: external-site-html.test.ts  member-model.test.ts  restartPolicy.test.ts  settings.test.ts
