[package]
name = "access-control-system"
version = "0.2.10"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "access_control_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
sysinfo = "0.39.5"
if-addrs = "0.15.0"

# WebKitGTK 側のカメラ/マイク権限リクエスト(WebKitPermissionRequest)を
# 明示的に許可するために使用。Tauri/wry がすでに同バージョンを依存グラフに
# 含んでいるため、ここでバージョンを固定して型の一致を保証する。
#
# nokhwa/image/base64 は、WebKitGTK 経由の getUserMedia() が本キオスク環境
# (PipeWire 未整備)では動作しないため、v4l2 を直接叩いてカメラフレームを
# 取得し JPEG エンコードして Tauri イベントで渡す代替経路のために使用する。
# ビルドには libclang-dev / libv4l-dev が必要(nokhwa の v4l2 バインディングが
# bindgen 経由でヘッダーを読むため)。
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "=2.0.2"
nokhwa = { version = "0.10", features = ["input-native"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

