[package]
name = "access-control-system"
version = "0.2.36"
description = "Laboratory attendance kiosk with face and gesture recognition"
authors = ["Yuya Nakayama"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "access_control_system_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.4.3"
# ブラウザ標準の fetch() は WebKitGTK の CORS 制約を受けるため、サーバーが
# 適切な Access-Control-Allow-Origin を返さないと "Load failed" で失敗する。
# Rust(reqwest)側からリクエストするこのプラグイン経由にすることで、
# ブラウザのCORS制約を受けずにAPIへ疎通できるようにする。
tauri-plugin-http = "2"
sysinfo = "0.39.5"
if-addrs = "0.15.0"

# 顔検出・顔認証・ジェスチャー認識のONNX推論(全てRust側で完結させる)。
# `load-dynamic` で libonnxruntime.so を実行時に dlopen する方式を採る:
# - pyke CDN の静的リンク版は glibc 2.38+ を要求し、devcontainer
#   (bookworm, glibc 2.36)でリンクできない
# - Microsoft 公式リリースの .so は glibc 2.27+ で、bookworm でも
#   本番機(Debian 13)でも動く
# .so は .devcontainer/setup-models.sh が resources/onnxruntime/ に配置し、
# deb にもリソースとして同梱する。CPU命令セットは実行時ディスパッチされる
# ため、AVX2非対応の Ivy Bridge(本番機 i7-3770)でもそのまま動作する。
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
# ort へのテンソル受け渡しに使う。ort が依存する ndarray とバージョンを
# 合わせる必要がある(0.17系)。
ndarray = "0.17"

# nokhwa/image/base64 は、WebKitGTK 経由の getUserMedia() が本キオスク環境
# (PipeWire 未整備)では動作しないため、v4l2 を直接叩いてカメラフレームを
# 取得し JPEG エンコードして Tauri イベントで渡す代替経路のために使用する。
# ビルドには libclang-dev / libv4l-dev が必要(nokhwa の v4l2 バインディングが
# bindgen 経由でヘッダーを読むため)。
[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
nokhwa = { version = "0.10", features = ["input-native"] }
# nokhwa はデバイスのフォーマット列挙が空だと開けない(v4l2loopback 等)。
# v4l で「現在の出力フォーマット」を直接照会し、Exact 要求で開くために使う。
# nokhwa が内部で同バージョンを使用しているため依存追加コストはほぼ無い。
v4l = "0.14"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
